--- a/views/slider.html
+++ b/views/slider.html
@@ -58,15 +58,9 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             
-                        <div class="item active items">
-                            <img src="{{'home/download.jpg'|imagepath1}}" width="200"/>
+                        <div class="item active items" ng-repeat="one in positionone">
+                            <img src="{{one.image|imagepath}}" width="200"/>
                         </div>
-                        <div class="item items">
-                            <img src="{{'home/banner.jpg'|imagepath1}}" width="200"/>
-                        </div>
-                        <div class="item items">
-                            <img src="{{'home/download.jpg'|imagepath1}}" width="200"/>
-                    </div>
 
                     <!-- Controls -->
                     
@@ -80,7 +74,6 @@
                 
                 <div class="searchslider">
             <form class="searchform searchformtext">
-               
                <select class="city onlycursor" ng-model="form.cityy" ng-click="citychange(form.cityy)">
                     <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="city in cities" value="{{city.id}}">{{city.name}} </option>
                 </select>
@@ -126,14 +119,8 @@
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="{{'home/banner.jpg'|imagepath1}}"/>
-                        </div>
-                        <div class="item">
-                            <img src="{{'home/download.jpg'|imagepath1}}"/>
-                        </div>
-                        <div class="item">
-                            <img src="{{'home/banner.jpg'|imagepath1}}"/>
+                        <div class="item active items" ng-repeat="one in positiontwo">
+                            <img src="{{one.image|imagepath}}" width="200"/>
                         </div>
                     </div>
 
