--- a/views/detail.html
+++ b/views/detail.html
@@ -37,9 +37,9 @@
 							<div class="pull-right">
 							
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
-<span class='st_twitter_hcount' displayText='Tweet'></span>
-<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-<span class='st_googleplus_hcount' displayText='Google +'></span>
+                            <span class='st_twitter_hcount' displayText='Tweet'></span>
+                            <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+                            <span class='st_googleplus_hcount' displayText='Google +'></span>
 							
 <!--
 							<ul class="nav navbar-nav">
@@ -67,16 +67,15 @@
                         <p class="fapadl" ng-repeat="payment in detail.modeofpayment">{{payment.modeofpaymentname}}</p>
                         <h2 class="title text-center">Enquiry</h2>
 					<div class="signup-form">
-                        <div class="signupmsg" ng-show="signupmsgg">
-                            {{signupmsg}}
+                        <div class="signupmsg" ng-show="enquiryshow">
+                        
+                            {{enquirymsg}}
                         </div>
-						<form>
-							<input type="text" ng-model="enquiry.name" placeholder="Name"/>
-							<input type="email" ng-model="enquiry.email" placeholder="Email"/>
-							<input type="number" ng-model="enquiry.phone" placeholder="Phone"/>
-                            <textarea ng-model="enquiry.comment" placeholder="Comment"></textarea>
-							<button class="btn btn-default" ng-click="enquiryuser(enquiry)">Signup</button>
-						</form>
+							<input type="text" ng-model="enquiry.name" class="form-control" ng-class="allvalidation[0].validation" placeholder="Name *" required/>
+							<input type="email" ng-model="enquiry.email"  class="form-control" ng-class="allvalidation[1].validation" placeholder="Email *" required/>
+							<input type="number" ng-model="enquiry.phone"  class="form-control" ng-class="allvalidation[2].validation" placeholder="Phone *" required/>
+                            <textarea ng-model="enquiry.comment"  class="form-control" ng-class="allvalidation[3].validation" placeholder="Comment *" required></textarea>
+							<button class="btn btn-default" ng-click="enquiryuser(enquiry)">Send</button>
 					</div>
             </div>
     </div>
