--- a/views/category.html
+++ b/views/category.html
@@ -24,6 +24,7 @@
 									<li><a href=""> <span class="pull-right">(9)</span>Boudestijn</a></li>
 									<li><a href=""> <span class="pull-right">(4)</span>Rösch creative culture</a></li>
 								</ul>
+								
 							</div>
 						</div><!--/brands_products-->
 						
@@ -58,7 +59,7 @@
 							
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
-                                <a class="btn btn-primary mrr" href="">Send Email</a>
+                                <a class="btn btn-primary mrr" ng-click="sendmail(list.listing)">Send Email</a>
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
                             </p>	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
