--- a/views/login.html
+++ b/views/login.html
@@ -5,16 +5,16 @@
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
                         <h5 class="demo">{{msg}}</h5>
-						<form>
 							
-							<input type="email" ng-model="login.email" placeholder="Email Address" />
-							<input type="password" ng-model="login.password" placeholder="Password"/>
+							<input type="email" ng-model="login.email" class="form-control" placeholder="Email Address" />
+							<input type="password" ng-model="login.password" class="form-control" placeholder="Password"/>
+<!--
 							<span>
-								<input type="checkbox" class="checkbox"> 
+								<input type="checkbox" class="checkbox form-control"> 
 								Keep me signed in
 							</span>
-							<button class="btn btn-default" ng-click="userlogin(login)">Login</button>
-                        </form>
+-->
+							<button class="btn btn-default form-control" ng-click="userlogin(login)">Login</button>
 					</div><!--/login form-->
 				</div>
 				<div class="col-sm-1">
@@ -26,11 +26,9 @@
                         <div class="signupmsg" ng-show="signupmsgg">
                             {{signupmsg}}
                         </div>
-						<form>
-							<input type="email" ng-model="signup.email" placeholder="Email Address"/>
-							<input type="password" ng-model="signup.password" placeholder="Password"/>
-							<button class="btn btn-default" ng-click="signupuser(signup)">Signup</button>
-						</form>
+							<input type="email" ng-model="signup.email" class="form-control" placeholder="Email Address"/>
+							<input type="password" ng-model="signup.password" class="form-control" placeholder="Password"/>
+							<button class="btn btn-default form-control" ng-click="signupuser(signup)">Signup</button>
 					</div><!--/sign up form-->
 				</div>
 			</div>
