--- a/views/category.html
+++ b/views/category.html
@@ -59,7 +59,7 @@
 							
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
-                                <a class="btn btn-primary mrr" ng-click="sendmail(list.listing)">Send Email</a>
+                                <a class="btn btn-primary mrr" ng-click="sendemail(list.listing)">Send Email</a>
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
                             </p>	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
