--- a/views/category.html
+++ b/views/category.html
@@ -52,9 +52,9 @@
 							<img class="media-object mediumimage" src="{{list.logo|imagepath}}" alt="">
 						</a>
 						<div class="media-body">
-                            <h4 class="media-heading onlycursor" ng-click="linkclick(list.listing)"><i class="fa fa-thumbs-up fa-2x"></i>&nbsp;{{list.name}}</h4>
-                            <p><i class="fa fa-map-marker fa-2x"></i>&nbsp;{{list.address}}</p>
-                            <p><i class="fa fa-phone fa-2x"></i>&nbsp;{{list.contactno}}</p>
+                            <h4 class="media-heading onlycursor" ng-click="linkclick(list.listing)"><i class="fa fa-thumbs-up"></i>&nbsp;{{list.name}}</h4>
+                            <p><i class="fa fa-map-marker"></i>&nbsp;{{list.address}}</p>
+                            <p><i class="fa fa-phone"></i>&nbsp;{{list.contactno}}</p>
 							<div class="social-icons pull-laft">
 							
                             <p class="pull-left">
