--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1842,19 +1842,19 @@ div[data-tree-model] li {
 
 div[data-tree-model] li .expanded {
   padding: 1px 10px;
-  background-image: url("http://localhost/anyinform/lib/images/png/minus25.png");
+  background-image: url("http://mafiawarloots.com/anyinform/lib/images/png/minus25.png");
   background-repeat: no-repeat;
 }
 
 div[data-tree-model] li .collapsed {
   padding: 1px 10px;
-  background-image: url("http://localhost/anyinform/lib/images/png/add196.png");
+  background-image: url("http://mafiawarloots.com/anyinform/lib/images/png/add196.png");
   background-repeat: no-repeat;
 }
 
 div[data-tree-model] li .normal {
   padding: 1px 10px;
-  background-image: url("http://localhost/anyinform/lib/images/png/minus25.png");
+  background-image: url("http://mafiawarloots.com/anyinform/lib/images/png/minus25.png");
   background-repeat: no-repeat;
 }
 
