--- a/views/listbusiness.html
+++ b/views/listbusiness.html
@@ -23,7 +23,7 @@
       node-children: each node's children
     -->
     <div
-      data-angular-treeview="false"
+      data-angular-treeview="true"
       data-tree-model="roleList"
       data-node-id="id"
       data-node-label="name"
