--- a/views/header.html
+++ b/views/header.html
@@ -1,4 +1,6 @@
-<header id="header" ng-controller="OtherCtrl"><!--header-->
+
+   
+    <header id="header" ng-controller="OtherCtrl"><!--header-->
 		<div class="header_top"><!--header_top-->
 			<div class="container">
 				<div class="row">
@@ -6,7 +8,8 @@
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
                                 <li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
-								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
+								<li><a ng-click="showlisting()" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
+<!--								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>-->
 								<!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
 							</ul>
