--- a/views/detail.html
+++ b/views/detail.html
@@ -36,10 +36,10 @@
 							</div> -->
                     <div class="pull-right">
 
-                        <span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
+                        <span class='st_facebook_hcount' displayText='Facebook' ></span>
                         <span class='st_twitter_hcount' displayText='Tweet'></span>
                         <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-                        <span class='st_googleplus_hcount' displayText='Google +'></span>
+                        <span class='st_googleplus_hcount stMainServices' displayText='Google +'></span>
 
                         <!--
 							<ul class="nav navbar-nav">
@@ -53,15 +53,68 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+        <div class="details-content">   
+        <div class="row">
+        <div class="col-md-8">
+            <div class="more-text">
+            <h2 class="title text-center">More Information</h2>
+            <p class="fapadl"><i class="fa fa-info-circle fapadr"></i>{{detail.listing.description}}</p>
+            <p class="fapadl"><i class="fa fa-map-marker fapadr"></i>&nbsp;{{detail.listing.address}}</p>
+            <p class="fapadl"><i class="fa fa-phone fapadr"></i>&nbsp;{{detail.listing.contactno}}</p>
+</div>
+            <div class="more-text">
+            <h2 class="title text-center">Other categories</h2>
+            <p class="fapadl" ng-repeat="category in detail.categories"><i class="fa fa-angle-double-right fapadr"></i>&nbsp;{{category.categoryname}}</p>
+            </div>
+            <div class="more-text">
+            
+            <h2 class="title text-center">Hours Of Operation</h2>
+            <div class="fapd">
+           <i class="fa fa-calendar"></i> <strong class="fapadl" ng-repeat="operation in detail.daysofoperation">{{operation.daysofoperationname}}&nbsp;&nbsp;</strong><br><br>
+             
+             
+            <i class="fa fa-clock-o"></i><span class="fapadl">9:00 am To 9:00 pm</span>
+            </div>
+            </div>
+            <div class="more-text">
+            <h2 class="title text-center">Modes Of Payment</h2>
+            <div class="fapd fap">
+            <i class="fa fa-money"></i><span class="fapadl" ng-repeat="payment in detail.modeofpayment">{{payment.modeofpaymentname}}</span>
+            </div>
+             </div>
+             <div class="more-text">
+            <h2 class="title text-center">Enquiry</h2>
+            <div class="signup-form">
+                <div class="signupmsg" ng-show="enquiryshow">
+
+                    {{enquirymsg}}
+                </div>
+                <input type="text" ng-model="enquiry.name" class="form-control" ng-class="allvalidation[0].validation" placeholder="Name *" required/>
+                <input type="email" ng-model="enquiry.email" class="form-control" ng-class="allvalidation[1].validation" placeholder="Email *" required/>
+                <input type="number" ng-model="enquiry.phone" class="form-control" ng-class="allvalidation[2].validation" placeholder="Phone *" required/>
+                <textarea ng-model="enquiry.comment" class="form-control" ng-class="allvalidation[3].validation" placeholder="Comment *" required></textarea>
+                <button class="btn btn-default" ng-click="enquiryuser(enquiry)">Send</button>
+            </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            
+                      <div class="fb-like-box" data-href="https://www.facebook.com/{{detail.listing.facebook}}" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
+        </div>
+        </div>
+        </div>
+        </div>
+<!--
         <div class="row">
             <h2 class="title text-center">More Information</h2>
 
 
-            <!--                           facebook post start-->
+          
 
             <div class="fb-like-box" data-href="https://www.facebook.com/{{detail.listing.facebook}}" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
 
-            <!--                           facebook post  end-->
+          
 
             <p class="fapadl"><i class="fa fa-info-circle fapadr"></i>{{detail.listing.description}}</p>
             <p class="fapadl"><i class="fa fa-map-marker fapadr"></i>&nbsp;{{detail.listing.address}}</p>
@@ -87,5 +140,6 @@
                 <button class="btn btn-default" ng-click="enquiryuser(enquiry)">Send</button>
             </div>
         </div>
+-->
     </div>
 </section>
