--- a/views/category.html
+++ b/views/category.html
@@ -1,5 +1,9 @@
 <section>
 		<div class="container">
+		<div class="banner">
+                   <img src="lib/images/ad/ad.jpg" ng-show="banner.banner==''" width="100%">
+                   <img src="lib/images/ad/{{banner.banner}}" ng-show="banner.banner!=''" width="100%">
+                </div>
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="left-sidebar">
